--- a/DeviceHandler/Views/CanConnectView.xaml
+++ b/DeviceHandler/Views/CanConnectView.xaml
@@ -74,7 +74,7 @@
             </ComboBox>
 
             <TextBlock Text="Node ID" VerticalAlignment="Center" Margin="0,0,5,0"/>
-            <TextBox Text="{Binding NodeID}" Margin="0,0,50,0" Width="100" />
+            <TextBox Text="{Binding SyncNodeID}" Margin="0,0,50,0" Width="100" />
 
            
 
