Add log messages to ParametersView

--- a/DeviceHandler/Views/ParametersView.xaml
+++ b/DeviceHandler/Views/ParametersView.xaml
@@ -115,6 +115,14 @@
                                            PassEventArgsToCommand="True"/>
                 </i:EventTrigger>
 
+
+                <i:EventTrigger EventName="SelectedItemChanged">
+                    <i:InvokeCommandAction Command="{Binding Path=DataContext.ListSourceParam_TreeView_SelectedItemChangedCommand, 
+                                                             Mode=OneWay, 
+                                                             RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=TreeView}}" 
+                                           PassEventArgsToCommand="True"/>
+                </i:EventTrigger>
+
             </i:Interaction.Triggers>
 
             <TreeView.Resources>
