--- a/DeviceSimulators/Views/DeviceSimulatorsView.xaml
+++ b/DeviceSimulators/Views/DeviceSimulatorsView.xaml
@@ -1,16 +1,15 @@
-﻿<mah:MetroWindow x:Class="DeviceSimulators.Views.DeviceSimulatorsView"
-                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-                xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" 
-                xmlns:selectors="clr-namespace:DeviceSimulators.Selectors"
-                xmlns:local="clr-namespace:DeviceSimulators.Views"
-                mc:Ignorable="d"
-                Title="Device Simulators" Height="Auto" Width="1200">
-
-    <mah:MetroWindow.Resources>
+﻿<UserControl x:Class="DeviceSimulators.Views.DeviceSimulatorsView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:selectors="clr-namespace:DeviceSimulators.Selectors"
+             xmlns:local="clr-namespace:DeviceSimulators.Views"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800">
+    
+    <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/DeviceSimulators;component/Resources/SimulatorsTemplates.xaml" />
@@ -19,7 +18,7 @@
             <selectors:SimulatorTemplateSelector x:Key="SimulatorTemplateSelector" />
 
         </ResourceDictionary>
-    </mah:MetroWindow.Resources>
+    </UserControl.Resources>
 
     <i:Interaction.Triggers>
 
@@ -71,9 +70,9 @@
 
                             <ControlTemplate.Triggers>
 
-                                
 
-                                
+
+
 
                             </ControlTemplate.Triggers>
 
@@ -84,4 +83,4 @@
         </ListView.ItemContainerStyle>
 
     </ListView>
-</mah:MetroWindow>
+</UserControl>
