--- a/DeviceHandler/Resources/DeviceParamsListStyle.xaml
+++ b/DeviceHandler/Resources/DeviceParamsListStyle.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:controls="clr-namespace:DeviceHandler.Controls">
 
     <Style x:Key="DeviceParamsListStyle" TargetType="ListViewItem">
         <Setter Property="Visibility" Value="{Binding Visibility}"/>
@@ -24,12 +25,12 @@
                         <TextBox Text="{Binding Value}" Grid.Column="4" />
 
                         <Button Grid.Column="6" 
-                                Command="{Binding DataContext.SetCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListView}}" 
+                                Command="{Binding DataContext.SetCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=controls:EmptyListView}}" 
                                 CommandParameter="{Binding}" 
                                 Content="Set"
                                 Visibility="{Binding GetSetVisibility}"/>
                         <Button Grid.Column="8" 
-                                Command="{Binding DataContext.GetCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListView}}" 
+                                Command="{Binding DataContext.GetCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=controls:EmptyListView}}" 
                                 CommandParameter="{Binding}" 
                                 Content="Get"
                                 Visibility="{Binding GetSetVisibility}"/>
