--- a/DeviceHandler/Views/ModbusTCPConnectView.xaml
+++ b/DeviceHandler/Views/ModbusTCPConnectView.xaml
@@ -44,7 +44,7 @@
         </StackPanel>
 
         <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Horizontal">
-            <TextBlock Text="No. of items" VerticalAlignment="Center" Margin="0,0,5,0"/>
+            <TextBlock Text="No. of channels" VerticalAlignment="Center" Margin="0,0,5,0"/>
             <TextBox Text="{Binding NoOfItems}" Margin="0,0,20,0" Width="100" VerticalContentAlignment="Center"/>
 
             <TextBlock Text="Size of items" VerticalAlignment="Center" Margin="0,0,5,0"/>
