--- a/DeviceHandler/Views/CommunicationView.xaml
+++ b/DeviceHandler/Views/CommunicationView.xaml
@@ -39,6 +39,11 @@
             <local:ModbusRTUConnectView DataContext="{Binding }"/>
         </DataTemplate>
 
+        <DataTemplate x:Key="SerialAndTCPTemplate">
+            <local:SerialAndTCPView DataContext="{Binding }"/>
+        </DataTemplate>
+
+
         <converter:TypeToNameConverter x:Key="ConnectionTypeStringConverter"/>
         <selectors:ConnectTemplateSelector x:Key="ConnectTemplateSelector"/>
 
