--- a/DeviceHandler/Views/ParametersView.xaml
+++ b/DeviceHandler/Views/ParametersView.xaml
@@ -136,7 +136,7 @@
                 <HierarchicalDataTemplate DataType="{x:Type mcu_modles:MCU_DeviceData}" ItemsSource="{Binding MCU_GroupList}" >
                     <TextBlock Text="{Binding Path=Name}" Margin="0,2" />
                 </HierarchicalDataTemplate>
-                <HierarchicalDataTemplate DataType="{x:Type dbc_modles:DBC_DeviceData}" ItemsSource="{Binding ParemetersList}" >
+                <HierarchicalDataTemplate DataType="{x:Type dbc_modles:DBC_DeviceData}" ItemsSource="{Binding DBC_GroupList}" >
                     <TextBlock Text="{Binding Path=Name}" Margin="0,2" ToolTip="{Binding DBCFilePath}"/>
                 </HierarchicalDataTemplate>
                 <HierarchicalDataTemplate DataType="{x:Type device_comm_models:DeviceData}" ItemsSource="{Binding ParemetersList}">
