Copy response handling from EA to GK PS

--- a/DeviceHandler/ParamGetSetList/ParamGetSetListView.xaml
+++ b/DeviceHandler/ParamGetSetList/ParamGetSetListView.xaml
@@ -305,9 +305,16 @@
                             </Grid>
 
                             <DataTemplate.Triggers>
+
+                                <DataTrigger Binding="{Binding DataContext.IsShowSave, 
+                                                                RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGrid}}" Value="False">
+                                    <Setter TargetName="save" Property="Visibility" Value="Collapsed"/>
+                                </DataTrigger>
+
                                 <DataTrigger Binding="{Binding Save}" Value="False">
                                     <Setter TargetName="save" Property="Visibility" Value="Collapsed"/>
                                 </DataTrigger>
+                                
                             </DataTemplate.Triggers>
 
                         </DataTemplate>
