--- a/DeviceHandler/ParamGetSetList/ParamGetSetListView.xaml
+++ b/DeviceHandler/ParamGetSetList/ParamGetSetListView.xaml
@@ -35,11 +35,13 @@
                   AutoGenerateColumns="False"
                   Margin="0,10,0,0"
                   Style="{x:Null}"
-                  Background="Transparent">
+                  Background="Transparent"
+                  RowHeight="30">
 
             <DataGrid.CellStyle>
                 <Style TargetType="DataGridCell" >
                     <Setter Property="BorderThickness" Value="0" />
+                    <Setter Property="VerticalAlignment" Value="Center" />
 
                     <Style.Triggers>
 
@@ -63,21 +65,9 @@
 
             <DataGrid.Columns>
 
-                <DataGridTemplateColumn Header="Name" >
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Name}" VerticalAlignment="Center" Margin="0,0,5,0" FontSize="14"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
+                <DataGridTextColumn Header="Name" Binding="{Binding Name}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Units" Binding="{Binding Units, Converter={StaticResource BracketedUnitsConverter}}" IsReadOnly="True"/>
 
-                <DataGridTemplateColumn Header="Units" >
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Units, Converter={StaticResource BracketedUnitsConverter}}" VerticalAlignment="Center"  Margin="0,0,5,0"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
 
                 <DataGridTemplateColumn Header="Value" >
                     <DataGridTemplateColumn.CellTemplate>
