Handle Get/Set/Save events

--- a/DeviceHandler/ParamGetSetList/ParamGetSetListView.xaml
+++ b/DeviceHandler/ParamGetSetList/ParamGetSetListView.xaml
@@ -33,6 +33,9 @@
                                                    HexTextBox_EnterEvent="{Binding DataContext.HexTextBox_EnterEvent,RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListView}}"
                                                    HexTextBox_KeyDownEvent="{Binding DataContext.HexTextBox_HexKeyDownEvent,RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListView}}"
                                                    HexTextBox_KeyUpEvent="{Binding DataContext.HexTextBox_HexKeyUpEvent,RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListView}}"
+                                                   ButtonGet_ClickEvent="{Binding DataContext.ButtonGet_ClickEvent,RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListView}}"
+                                                   ButtonSet_ClickEvent="{Binding DataContext.ButtonSet_ClickEvent,RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListView}}"
+                                                   ButtonSave_ClickEvent="{Binding DataContext.ButtonSave_ClickEvent,RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListView}}"
                                                    Margin="0,2"/>
                     </ControlTemplate>
                 </Setter.Value>
